[package]
name = "zephyr"
version = "0.1.0"
edition = "2021"

[features]
default = []

inventory = ["dep:inventory"]
scraping = ["dep:scraper"]

[dependencies]
inventory = { version = "0.3", optional = true }
scraper = { version = "0.13.0", optional = true }
tracing = "0.1.35"

[[example]]
name = "inventory"
required-features = ["inventory"]
